@startuml

abstract class piazzaForum.DBConn
class piazzaForum.UserAuthCtrl
class piazzaForum.PostCtrl
class piazzaForum.StatsCtrl
class piazzaForum.ConsoleUI

piazzaForum.DBConn <|-- piazzaForum.UserAuthCtrl
piazzaForum.DBConn <|-- piazzaForum.StatsCtrl
piazzaForum.DBConn <|-- piazzaForum.PostCtrl
piazzaForum.UserAuthCtrl"authCtrl: 1"<--piazzaForum.ConsoleUI
piazzaForum.PostCtrl"postCtrl: 1" <--piazzaForum.ConsoleUI
piazzaForum.StatsCtrl"statsCtrl: 1"<--piazzaForum.ConsoleUI



abstract class piazzaForum.DBConn {
#Connection conn;
+connect()
}

class piazzaForum.UserAuthCtrl {
+login(String, String)
}

class piazzaForum.PostCtrl {
-{static} String STARTING_POST
-{static} String REPLY_POST
-{static} String FOLLOW_UP
-{static} String ANSWER
-{static} String COMMENT
-generatePrimaryKey()
-createPost(String, String, String, String)
-getDate()
-getTime()
+createStartingPost(String, int, String, String, String, List<String>)
+createFollowUp(boolean, int, String, String, String)
-createReplyPost(Integer, Integer, String, String, String)
+createAnswerOn(int, String, String, String)
+createCommentOn(int, String, String, String)
-createTaggedStartingPost(int, List<String>)
+searchPosts(String, String)
+getFolders(String)
+getPosts(String)
+getUserType(String)
}

class piazzaForum.StatsCtrl {
+verifyInstructor(String)
-verifyUserInCourse(String, String)
-printStats(String)
+getUserStats(String, String)
}

class piazzaForum.ConsoleUI {
-String loggedInEmail
-{static}ACTIVE_COURSE_CODE
-List<String> ALL_TAGS
-Scanner inputScanner
-resetScanner()
+login()
-createStartingPost()
-getTag(List<String>)
-searchPosts()
-createAnswerOn()
-viewStats()
-invalidAction()
+chooseAction()
+{static}main(String[])
}



@enduml
